force-app/main/default/objects/Project__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <displayFormat>P-{000}</displayFormat>
    <externalId>true</externalId>
    <label>Code</label>
    <type>AutoNumber</type>
</CustomField>