force-app/main/default/objects/Project__c/fields/CompletedTasks__c.field-meta.xml
<CustomField>
    <fullName>CompletedTasks__c</fullName>
    <label>Completed Tasks</label>
    <summaryFilterItems>
        <field>ProjectTask__c.TaskStatus__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>