force-app/main/default/objects/Project__c/fields/HoursActualTotal__c.field-meta.xml
<CustomField>
    <fullName>HoursActualTotal__c</fullName>
    <label>Hours Actual (Total)</label>
    <summarizedField>ProjectTask__c.ActualHours__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>