force-app/main/default/objects/Project__c/fields/HoursEstimatedTotal__c.field-meta.xml
<CustomField>
    <fullName>HoursEstimatedTotal__c</fullName>
    <label>Hours Estimated (Total)</label>
    <summarizedField>ProjectTask__c.EstimatedHours__c</summarizedField>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>