force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <description>Picklist to select project duration</description>
    <label>Project Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>