force-app/main/default/objects/Project__c/fields/TasksCompletedPercentage__c.field-meta.xml
<CustomField>
    <fullName>TasksCompletedPercentage__c</fullName>
    <formula>IF(
    TotalTasks__c = 0,
    0,
    (CompletedTasks__c / TotalTasks__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasks Completed(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>