force-app/main/default/objects/Project__c/fields/TotalTasks__c.field-meta.xml
<CustomField>
    <fullName>TotalTasks__c</fullName>
    <label>Total Tasks</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>