force-app/main/default/objects/Project__c/validationRules/Project_Budget_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Budget_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Budget__c &lt; 5000</errorConditionFormula>
    <errorMessage>Project budget is too low</errorMessage>
</ValidationRule>