force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>ProjectStatus__c</columns>
    <columns>TotalTasks__c</columns>
    <columns>CompletedTasks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>